feat: 實作核心應用程式架構、使用者認證、群組管理與聊天功能，並導入開發工具與 CI/CD 流程

--- a/index.html
+++ b/index.html
@@ -1,16 +1,28 @@
 <!doctype html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="icon" type="image/png" href="/icon.png" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Sub-Buddy | 拼團小幫手 - 輕鬆尋找合購夥伴</title>
+    <meta
+      name="description"
+      content="Sub-Buddy 是一個協助使用者輕鬆尋找 Netflix, Spotify, YouTube Premium 等串流服務合購夥伴的媒合平台。安全、透明、省錢。"
+    />
+    <meta
+      name="keywords"
+      content="拼團, 合購, Netflix, Spotify, Disney+, YouTube Premium, 家庭方案, 省錢"
+    />
+    <meta property="og:title" content="Sub-Buddy | 拼團小幫手" />
+    <meta
+      property="og:description"
+      content="找個好夥伴，分擔訂閱費。各種家庭方案都能在這裡找到合購夥伴。"
+    />
+    <meta property="og:type" content="website" />
+  </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <link rel="icon" type="image/png" href="/icon.png" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Sub-Buddy</title>
-</head>
-
-<body>
-  <div id="app"></div>
-  <script type="module" src="/src/main.js"></script>
-</body>
-
+  <body>
+    <div id="app"></div>
+    <script type="module" src="/src/main.js"></script>
+  </body>
 </html>
