fix(security): add helmet and CSP
- Add helmet middleware to functions server
- Add Content-Security-Policy meta tag to web index.html
- Disable x-powered-by header

--- a/apps/web/index.html
+++ b/apps/web/index.html
@@ -12,6 +12,7 @@
   <meta property="og:title" content="Sub-Buddy | 拼團小幫手" />
   <meta property="og:description" content="找個好夥伴，分擔訂閱費。各種家庭方案都能在這裡找到合購夥伴。" />
   <meta property="og:type" content="website" />
+  <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' 'unsafe-inline' https://www.gstatic.com https://*.firebaseio.com; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; font-src 'self' https://fonts.gstatic.com; img-src 'self' data: https:; connect-src 'self' https://identitytoolkit.googleapis.com https://securetoken.googleapis.com https://firestore.googleapis.com https://*.firebaseio.com https://*.cloudfunctions.net;" />
 </head>
 
 <body>
